[tool.poetry]
name = "lvm-spec-pressure"
version = "1.0.0"
description = "A TCP server that provides access to the LVM spectrograph pressure transducers."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"

[tool.poetry.scripts]
lvm-spec-pressure = "lvm_spec_pressure.__main__:lvm_spec_pressure"

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
pyserial-asyncio = "^0.5"
sdsstools = "^1.0.0"
daemonocle = "^1.2.3"

[tool.poetry.dev-dependencies]
ipython = ">=7.11.0"
flake8 = ">=3.7.9"
isort = ">=4.3.21"
ipdb = ">=0.12.3"
black = ">=20.8b1"

[tool.black]
line-length = 88
target-version = ['py310']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "lvm_spec_pressure"
known_typing = ["typing"]
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
